--- a/Makefile.am
+++ b/Makefile.am
@@ -11,7 +11,7 @@ EXTRA_DIST = COPYING LIST HACKING ChangeLog NEWS README INSTALL INSTALL.AMIGA IN
 	syntax/diff.jsf.in syntax/asm.jsf.in syntax/tex.jsf.in syntax/css.jsf.in \
 	syntax/ocaml.jsf.in syntax/4gl.jsf.in syntax/sml.jsf.in syntax/sql.jsf.in \
 	syntax/awk.jsf.in syntax/cobol.jsf.in syntax/sed.jsf.in syntax/ps.jsf.in \
-	cygbuild setup.hint xterm-patch xterm-readme
+	cygbuild setup.hint xterm-patch xterm-readme syntax/ada.jsf.in
 
 sysconf_joedir = $(sysconfdir)/joe
 sysconf_joe_DATA = joerc jmacsrc jstarrc rjoerc jpicorc
@@ -44,7 +44,7 @@ sysconf_syntax_DATA = syntax/c.jsf syntax/perl.jsf syntax/verilog.jsf \
 	syntax/lisp.jsf syntax/csh.jsf syntax/mason.jsf syntax/diff.jsf \
 	syntax/asm.jsf syntax/tex.jsf syntax/css.jsf syntax/ocaml.jsf \
 	syntax/4gl.jsf syntax/sml.jsf syntax/sql.jsf syntax/awk.jsf \
-	syntax/cobol.jsf syntax/sed.jsf syntax/ps.jsf
+	syntax/cobol.jsf syntax/sed.jsf syntax/ps.jsf syntax/ada.jsf
 
 sysconf_charmapsdir = $(sysconf_joedir)/charmaps
 sysconf_charmaps_DATA = charmaps/klingon
