Troff syntax file

--- a/configure.ac
+++ b/configure.ac
@@ -154,5 +154,5 @@ syntax/vhdl.jsf syntax/fortran.jsf syntax/java.jsf syntax/xml.jsf syntax/tcl.jsf
 charmaps/klingon syntax/lisp.jsf syntax/csh.jsf syntax/mason.jsf syntax/diff.jsf
 syntax/asm.jsf syntax/css.jsf syntax/tex.jsf syntax/ocaml.jsf syntax/4gl.jsf
 syntax/sml.jsf syntax/sql.jsf syntax/awk.jsf syntax/cobol.jsf syntax/sed.jsf
-syntax/ps.jsf syntax/ada.jsf])
+syntax/ps.jsf syntax/ada.jsf syntax/troff.jsf])
 AC_OUTPUT
