--- a/jmacsrc.in
+++ b/jmacsrc.in
@@ -522,6 +522,20 @@
 *.cob
 -syntax cobol
 
+ REXX
+*.rex
+-syntax rexx
+-autoindent
+
+*.REX
+-syntax rexx
+-autoindent
+
+*
++#!\+\[ 	]\+\[a-z/]/rxx\>
+-syntax rexx
+-autoindent
+
  sed
 *.sed
 -syntax sed
