--- a/jpicorc.in
+++ b/jpicorc.in
@@ -125,6 +125,10 @@
 		Assume terminal has xterm 256 color support (ESC [ 38 ; 5 ; NNN m and
                 ESC [ 48 ; 5 ; NNN m).
 
+-guess_non_utf8	Allow guess of non-UTF-8 file encoding in a UTF-8 locale.
+
+ -guess_utf8	Allow guess of UTF-8 file encoding in non-UTF-8 locale.
+
 -guess_crlf     Automatically detect MS-DOS files and set -crlf appropriately
 
 -guess_indent	Guess indent character (tab or space).
@@ -162,6 +166,8 @@
 
 		For example: -text_color bg_blue+white
 		Sets the background color to blue and foreground color to white.
+
+-restore	Restore previous cursor position when files are opened
 
 -search_prompting
 		Search prompts with previous search request.
@@ -1161,6 +1167,18 @@ xtmouse		^[ [ M		Introduces an xterm mouse event
 @SPELL@file	^[ T		Spell check word
 @SPELL@file	^[ t
 @SPELL@file	^[ ^T
+
+ Compile macro
+
+:def compile querysave,query,scratch,"* Build Log *",rtn,markb,eof," ",markk,blkdel,build
+
+ Grep
+
+:def grep_find mwind!,mfit!,scratch,"* Grep Log *",rtn,bof,markb,eof," ",markk,blkdel,grep
+
+ Man page
+
+:def man scratch,"* Man Page *",rtn,bof,markb,eof," ",markk,blkdel," ",ltarw,run,"man -P cat -S 2:3 "
 
 paste			^[ ] 5 2 ;		Bracketed paste
 
