-help_is_utf8 option

--- a/rc/joerc.in
+++ b/rc/joerc.in
@@ -51,6 +51,8 @@
  -option	Sets the option
  --option	Clears the option
 
+ -help_is_utf8	Set if help text is in UTF-8 format.  Leave clear if it's a raw 8-bit format.
+
  -mid		Cursor is recentered when scrolling is necessary
 
  -marking	Text between ^KB and cursor is highlighted (use with -lightoff)
@@ -975,7 +977,8 @@
  rightmost N springs each get one extra space).  Hint: if you want vertical
  alignment, each line should have the same number of springs.
 
- UTF-8 sequences can be used in the help text (local 8-bit characters can not be used).
+ Use the '-help_is_utf8' global option to allow UTF-8 sequences in the help
+ text.  Otherwise, the locale 8-bit character set is assumed.
 
 {Basic
 \i   Help Screen    \|turn off with ^KH    more help with ESC . (^[.)              \i
