--- a/syntax/sh.jsf.in
+++ b/syntax/sh.jsf.in
@@ -36,24 +36,36 @@
 
 :maybe_inc1 Idle
 	*		inc		buffer noeat
-	"`&()\\|;'\"<> 	\n"	idle	noeat
+	"\""		inc_quote
+	"'"		inc_quote
+	" 	"	maybe_inc1
+	"\n"		toeof
+	"`&()\\|;<>"	idle	noeat
 	"\\"		skipquote
 	"-"		skipminus
 
 :skipminus Idle
 	*		inc1		buffer noeat
+	" 	"	skipminus
 	"\\"		skipquote
-	"`&()\\|;'\"<> 	\n"	idle	noeat
+	"\""		inc1_quote
+	"'"		inc1_quote
+	"`&()\\|;<>\n"	idle	noeat
 
 :skipquote Idle
 	*		inc		buffer noeat
 	"`&()\\|;'\"<> 	\n"	idle	noeat
 
+# All of these are for case of leading -
+
 :inc1 Var
 	*		inc1
 	"`&()\\|;'\"<> 	\n"	skipline1	noeat save_s
 
-:skipline1 Constant
+:inc1_quote Var
+	*		inc1	buffer noeat
+
+:skipline1 Idle
 	*		skipline1
 	"\n"		next_line1
 
@@ -71,13 +83,18 @@ done
 :founddelim1 Var
 	*		idle		noeat
 
+# No leading -
+
 :inc Var
 	*		inc
 	"`&()\\|;'\"<> 	\n"	skipline	noeat save_s
 
+:inc_quote Var
+	*		inc	noeat buffer
+
 # Should be treated as a normal line here...
 
-:skipline Constant
+:skipline Idle
 	*		skipline
 	"\n"		next_line
 
@@ -94,6 +111,11 @@ done
 
 :founddelim Var
 	*		idle		noeat
+
+# << with no word.  Rest of file is a constant.
+
+:toeof Constant
+	*		toeof
 
 :comment Comment
 	*		comment
